infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: gauri65/comments:latest
          resources:
            limits:
              memory: 512Mi
              cpu: "0.2"

---
# for inside world communication (between pods)
apiVersion: v1
kind: Service
metadata:
  name: comments-ip-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      port: 4000
      protocol: TCP
      targetPort: 4000
