infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: gauri65/event-bus:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  # we need ClusterIp here Instead of NodePort and event-bus
  # doesnt need to comunnicate to outer world
  selector:
    app: event-bus
  ports:
    - port: 4003
      protocol: TCP
      targetPort: 4003
