infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: gauri65/moderation:latest
          resources:
            limits:
              memory: 256Mi
              cpu: "0.2"

---
# for inside world communication (between pods)
apiVersion: v1
kind: Service
metadata:
  name: moderation-ip-srv
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      port: 4004
      protocol: TCP
      targetPort: 4004
