infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: post-ingress
  labels:
    name: post-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: kxakta.com
      http:
        paths:
          - pathType: Exact
            path: /posts
            backend:
              service:
                name: query-ip-srv
                port:
                  number: 4002
          - pathType: Exact
            path: /posts/create
            backend:
              service:
                name: post-ip-srv
                port:
                  number: 4001
          - pathType: ImplementationSpecific
            path: /posts/([^/]+)/comments
            backend:
              service:
                name: comments-ip-srv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: /?(.*)
            backend:
              service:
                name: frontend-posts-srv
                port:
                  number: 3000
